--- a/client/package.json
+++ b/client/package.json
@@ -3,28 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@fontsource/roboto": "^4.5.1",
-    "@mui/icons-material": "^5.0.1",
-    "@mui/material": "^5.0.2",
-    "@mui/styles": "^5.0.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.4",
-    "dotenv-cli": "^4.0.0",
-    "firebase": "^9.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.16.1",
-    "react-scripts": "^4.0.3",
-    "web-vitals": "^1.1.2"
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.5",
+    "axios": "^1.2.3",
+    "firebase": "^9.16.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.1",
+    "react-scripts": "^5.0.1",
+    "tss-react": "^4.5.2",
+    "@babel/core": ">=7.0.0 <8.0.0",
+    "@babel/plugin-transform-react-jsx" :"^7.14.9",
+    "@babel/plugin-syntax-flow":"^7.14.5",
+    "typescript":">=3.2.1 <4.0.0 || >=4.0.0 <5.0.0"
   },
   "scripts": {
-    "start": "dotenv -e .env react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false dotenv -e .env react-scripts build",
-    "winBuild": "set \"GENERATE_SOURCEMAP=false\" && dotenv -e .env react-scripts build",
+    "start": "react-scripts start",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "winBuild": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,9 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "dotenv": "^10.0.0",
-    "nodemon": "^2.0.13"
   }
 }
